--- a/index.css
+++ b/index.css
@@ -108,6 +108,17 @@ h1{
 .check{
     color: white;
 }
+#video{
+    width: 400px;
+    height: 400px;
+}
+@media screen and (max-width: 400px) {
+    #video{
+        border: 1px solid red;
+        width: 300px;
+        height: 300px;
+    }
+}
 /* input{
     margin: 3px;
 } */
