--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ canvas,video{
     padding-top: 1vh;
     position: absolute;
 }
+
 #password{
     z-index: 1;
     position: absolute;
@@ -107,6 +108,30 @@ h1{
 }
 .check{
     color: white;
+}
+
+.spinner {
+    /* Size */
+    height: 4rem;
+    width: 4rem;
+    position: absolute;
+    /* Create a curve at the top */
+    border: 4px solid #d1d5db;
+    border-top-color: #3b82f6;
+    border-radius: 50%;
+
+    /* margin: auto; */
+    z-index: 4;
+    animation: spinner 800ms linear infinite;
+}
+
+@keyframes spinner {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 /* input{
     margin: 3px;
